force-app/main/default/objects/TriggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global Controller for Trigger Settings</description>
    <fields>
        <fullName>AccountTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows turning off of all Account Triggers if required during testing or batch operations</description>
        <inlineHelpText>Allows turning off of all Account Triggers if required during testing or batch operations</inlineHelpText>
        <label>Account Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows turning off of all Contact Triggers if required during testing or batch operations</description>
        <inlineHelpText>Allows turning off of all Contact Triggers if required during testing or batch operations</inlineHelpText>
        <label>Contact Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDSTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows turning off of all EDS Triggers if required during testing or batch operations</description>
        <inlineHelpText>Allows turning off of all EDS Triggers if required during testing or batch operations</inlineHelpText>
        <label>EDS Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPOTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows turning off of all Employer Portal Object Triggers if required during testing or batch operations</description>
        <inlineHelpText>Allows turning off of all Employer Portal Object Triggers if required during testing or batch operations</inlineHelpText>
        <label>EPO Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Settings</label>
</CustomObject>